# csar

./: .gitignore  LICENSE  README.md  conftest.py  env.yml  make-supp.sh  minimal-requirements.txt  pyproject.toml  reproduce.sh
src/: __main__.py  common.py  logutils.py  minimal.py  util.py
src/analysis/: __init__.py  collect.py  report.py
src/generation/: __init__.py  dataset_list.py  entangled.py  preprocessing.py  procedural.py
src/induction/: __init__.py  common.py  csar.py  ibm_model.py  morfessor.py  pipeline.py  preprocessing.py  tokenizer.py  util.py
src/scripts/: __init__.py  amr.py  coco.py  ec.py  ec_morfessor.py  ec_mu.py  morpho_challenge.py  mt.py  user_data.py  util.py
src/test/: datasets.py  test_handcrafted.py  test_ibm_model.py  test_morfessor.py  test_procedural.py  test_tokenizers.py  test_util.py
src/test/data/morphology/: adversarial.json  compositional-simple.json  expansion-1.json  expansion-2.json  expansion-backward.json  expansion-discon.json  expansion-middle.json  extra-forms-1.json  extra-forms-2.json  extra-forms-imbalance.json  form-overlap.json  green-card-ambiguous.json  green-card.json  holistic.json  misc-1.json  misc-3.json  misc-4.json  misc-5.json  misc-6.json  misc-7.json  misc-8.json  multipart-form-overlap.json  noncomp-simple.json  polysemy-hard.json  polysemy.json  synonymy.json
src/test/data/morphology/xfail/: expansion-2x.json  misc-3x.json  misc-4x.json  polysemy-hard-x.json
